front-gateway/src/components/Apartment/style/_apt-hero.scss
.apt-header {
  background: $brand-primary;
  height: 500px;
  margin-bottom: 10px;
  position: relative;

  &::after {
    background: linear-gradient(to top, rgba(0, 0, 0, 0) 86%, rgba(40, 40, 40, 0.6));
    content: "";
    height: 100%;
    position: absolute;
    top: 0;
    width: 100%;
  }

  @media (max-width: $screen-md-max) {
    margin-bottom: 25px;
  }

  @media (max-width: $screen-xs-min) {
    height: 300px;
  }

  .apt-header-badge-container {
    position: absolute;
    text-align: center;
    top: 487px;
    width: 100%;
    z-index: 1;

    @media (max-width: $screen-xs-min) {
      top: 287px;
    }

    .listingBadge {
      border-radius: 100px;
      display: inline-block;
      width: 190px;
      top: 485px;
    }
  }
}

.fixed-carousel {
  display: flex;
  direction: ltr;
}

.flickity-page-dots {
  display: none;
}

.flickity-prev-next-button:disabled {
  display: none;
}

.location-container {
  background-color: lighten($gray-lighter, 2%);
}

.navbar {
  @include gradient-vertical(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0), 0%, 100%);

  border: 0;

  @media (max-width: $screen-xs-min) {
    background-color: #fff;

    .btn-success {
      display: block;
    }
  }
}

.sliderBoxes img {
  border-right: 2px solid white;
  height: 500px;

  @media (max-width: $screen-xs-min) {
    height: 300px;
  }
}

